--- a/Php_Gallery/CSS/Register.css
+++ b/Php_Gallery/CSS/Register.css
@@ -8,14 +8,14 @@
 @font-face {
     font-family: 'Iceland';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     src: local('Iceland'), local('Iceland-Regular'), url(http://themes.googleusercontent.com/static/fonts/iceland/v3/F6LYTZLHrG9BNYXRjU7RSw.woff) format('woff');
 }
 
 @font-face {
     font-family: 'Pacifico';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     src: local('Pacifico Regular'), local('Pacifico-Regular'), url(http://themes.googleusercontent.com/static/fonts/pacifico/v5/yunJt0R8tCvMyj_V4xSjafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
@@ -29,14 +29,14 @@
 @font-face {
     font-family: 'Audiowide';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     src: local('Audiowide'), local('Audiowide-Regular'), url(http://themes.googleusercontent.com/static/fonts/audiowide/v2/8XtYtNKEyyZh481XVWfVOj8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 
 @font-face {
     font-family: 'Vampiro One';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     src: local('Vampiro One'), local('VampiroOne-Regular'), url(http://themes.googleusercontent.com/static/fonts/vampiroone/v3/Ho2Xld8UbQyBA8XLxF1_NYbN6UDyHWBl620a-IRfuBk.woff) format('woff');
 }
 
@@ -52,7 +52,7 @@ body{
 }
 h1{
     text-align: center;
-    font-size: 5rem;
+    font-size: 4rem;
     font-family: "Vampiro One";
     color: #FFDD1B;
     margin-bottom: 2%;
@@ -73,12 +73,15 @@ h1{
 }
 .user_interface header{
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.9rem;
+    font-family: Monoton;
+    color: blue;
 }
 .user_interface form{
     width: 400px;
-    height: 500px;
+    height: 400px;
     margin: 0 auto;
+  
 
 }
 .user_interface input{
@@ -92,10 +95,14 @@ h1{
     border-radius: 20px;
     text-align: center;
     font-family: Audiowide;
+    border: 1px solid;
 
 }
 .user_interface #try_free{
     margin: 0 auto;
+    margin-top: 2%;
+    border: 1px solid;
+
 }
 .user_interface input:focus {
     -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
