--- a/HTML_CSS/PHP-Gallery/Php_Gallery/CSS/footer.css
+++ b/HTML_CSS/PHP-Gallery/Php_Gallery/CSS/footer.css
@@ -1,9 +1,3 @@
-@font-face {
-    font-family: 'Monoton';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Monoton'), local('Monoton-Regular'), url(http://themes.googleusercontent.com/static/fonts/monoton/v4/AKI-lyzyNHXByGHeOcds_w.woff) format('woff');
-}
 
 @font-face {
     font-family: 'Iceland';
@@ -11,35 +5,6 @@
     font-weight: 300;
     src: local('Iceland'), local('Iceland-Regular'), url(http://themes.googleusercontent.com/static/fonts/iceland/v3/F6LYTZLHrG9BNYXRjU7RSw.woff) format('woff');
 }
-
-@font-face {
-    font-family: 'Pacifico';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Pacifico Regular'), local('Pacifico-Regular'), url(http://themes.googleusercontent.com/static/fonts/pacifico/v5/yunJt0R8tCvMyj_V4xSjafesZW2xOQ-xsNqO47m55DA.woff) format('woff');
-}
-
-@font-face {
-    font-family: 'PressStart';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Press Start 2P'), local('PressStart2P-Regular'), url(http://themes.googleusercontent.com/static/fonts/pressstart2p/v2/8Lg6LX8-ntOHUQnvQ0E7o3dD2UuwsmbX3BOp4SL_VwM.woff) format('woff');
-}
-
-@font-face {
-    font-family: 'Audiowide';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Audiowide'), local('Audiowide-Regular'), url(http://themes.googleusercontent.com/static/fonts/audiowide/v2/8XtYtNKEyyZh481XVWfVOj8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
-}
-
-@font-face {
-    font-family: 'Vampiro One';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Vampiro One'), local('VampiroOne-Regular'), url(http://themes.googleusercontent.com/static/fonts/vampiroone/v3/Ho2Xld8UbQyBA8XLxF1_NYbN6UDyHWBl620a-IRfuBk.woff) format('woff');
-}
-
 
 *{
     padding: 0;
@@ -89,6 +54,7 @@ body{
 
 .neon_lines_footer{
     -webkit-animation: neon5 1.5s ease-in-out infinite alternate;
+    border: #ffffff 1px solid;
 
 
 }
