--- a/Php_Gallery/CSS/Register.css
+++ b/Php_Gallery/CSS/Register.css
@@ -48,21 +48,35 @@
 
 body{
     font-size: 62.50%;
-    background-color: #222222;
+
+    background-image: url("../IMAGES/Background.jpg");
+    background-size: 20%;
+    padding: 2%;
 }
 h1{
     text-align: center;
     font-size: 4rem;
     font-family: "Vampiro One";
-    color: black;
+    color: #1e1b1b;
     margin-bottom: 2%;
-    -webkit-animation: neon2 1.0s ease-in-out infinite alternate;
+    -webkit-animation: neon2 0.9s ease-in-out infinite alternate;
 }
-::-webkit-input-placeholder { color:#f00; font-family: "Vampiro One"}
-.user_interface{
-    -webkit-animation: neon3 1.5s ease-in-out infinite alternate;
 
+::-webkit-input-placeholder {
+    color:#f00; font-family: "Vampiro One";
 }
+
+a{
+
+    font-size: 20px;
+    text-decoration: none;
+    color: darkslategrey;
+    border-radius: 20px;
+    text-align: center;
+    display: block;
+    margin: 2%;
+}
+
 
 .user_interface{
     background: whitesmoke;
@@ -71,6 +85,7 @@ h1{
     margin-top: 5%;
     width: 500px;
     height: 600px;
+    -webkit-animation: neon3 2s ease-in-out infinite alternate;
 }
 .user_interface header{
     text-align: center;
@@ -97,13 +112,20 @@ h1{
     text-align: center;
     font-family: Audiowide;
     border: 1px solid;
+    outline: none;
 
 }
 .user_interface #try_free{
     margin: 0 auto;
     margin-top: 2%;
-    border: 1px solid;
+    border: 1px solid black;
+    color: blue;
 
+
+}
+.user_interface #login{
+    color: green;
+    border: black 1px solid;
 }
 .user_interface input:focus {
     -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
@@ -112,17 +134,29 @@ h1{
 /*glow for webkit*/
 @-webkit-keyframes neon1 {
     from {
-        box-shadow: 0 0 10px #fff,
-        0 0 5px  #fff,
-        0 0 10px  #fff,
-        0 0 20px  #228DFF,
-        0 0 30px  #228DFF,
-        0 0 50px  #228DFF,
-        0 0 70px #228DFF,
-        0 0 80px #228DFF;
+        box-shadow: 0 0 1px #fff,
+        0 0 2px  #fff,
+        0 0 4px  #fff,
+        0 0 5px  #228DFF,
+        0 0 8px  #228DFF,
+        0 0 10px  #228DFF,
+        0 0 25px #228DFF,
+        0 0 30px #228DFF;
     }
     to {
-        box-shadow: 0 0 10px #fff,
+        box-shadow: 0 0 1px #fff,
+        0 0 1px  #fff,
+        0 0 5px  #fff,
+        0 0 10px  #228DFF,
+        0 0 12px  #228DFF,
+        0 0 15px  #228DFF,
+        0 0 20px #228DFF,
+        0 0 30px #228DFF;
+    }
+}
+@-webkit-keyframes neon2 {
+    from {
+        text-shadow:  0 0 10px #fff,
         0 0 1px  #fff,
         0 0 5px  #fff,
         0 0 10px  #228DFF,
@@ -130,18 +164,6 @@ h1{
         0 0 35px  #228DFF,
         0 0 40px #228DFF,
         0 0 50px #228DFF;
-    }
-}
-@-webkit-keyframes neon2 {
-    from {
-        text-shadow:  0 0 10px #fff,
-        0 0 20px  #fff,
-        0 0 30px  #fff,
-        0 0 40px  #FFDD1B,
-        0 0 70px  #FFDD1B,
-        0 0 80px  #FFDD1B,
-        0 0 100px #FFDD1B,
-        0 0 150px #FFDD1B;
     }
 
     to {
@@ -151,8 +173,8 @@ h1{
         0 0 30px  #FFDD1B,
         0 0 50px  #FFDD1B,
         0 0 60px  #FFDD1B,
-        0 0 90px #FFDD1B,
-        0 0 120px #FFDD1B;
+        0 0 70px #FFDD1B,
+        0 0 80px #FFDD1B;
     }
 }
 @-webkit-keyframes neon3 {
@@ -163,19 +185,19 @@ h1{
         0 0 15px  #B6FF00,
         0 0 30px  #B6FF00,
         0 0 50px  #B6FF00,
-        0 0 80px #B6FF00,
-        0 0 100px #B6FF00;
+        0 0 70px #B6FF00,
+        0 0 80px #B6FF00;
     }
 
     to {
         box-shadow: 0 0 10px #fff,
-        0 0 2px  #fff,
-        0 0 15px  #fff,
-        0 0 20px  #B6FF00,
-        0 0 30px  #B6FF00,
-        0 0 40px  #B6FF00,
-        0 0 90px #B6FF00,
-        0 0 95px #B6FF00;
+        0 0 1px  #fff,
+        0 0 5px  #fff,
+        0 0 10px  #228DFF,
+        0 0 20px  #228DFF,
+        0 0 35px  #228DFF,
+        0 0 40px #228DFF,
+        0 0 50px #228DFF;
     }
 }
 
