added error.php and edited register.css

--- a/gallery/CSS/register.css
+++ b/gallery/CSS/register.css
@@ -77,7 +77,6 @@ a{
     margin: 2%;
 }
 
-
 .user_interface{
     background: whitesmoke;
     border-radius: 40px;
@@ -97,8 +96,6 @@ a{
     width: 400px;
     height: 300px;
     margin: 0 auto;
-
-
 }
 .user_interface input{
     display: block;
@@ -113,15 +110,12 @@ a{
     font-family: Audiowide;
     border: 1px solid;
     outline: none;
-
 }
 .user_interface #try_free{
     margin: 0 auto;
     margin-top: 2%;
     border: 1px solid black;
     color: blue;
-
-
 }
 .user_interface #login{
     color: green;
@@ -129,6 +123,17 @@ a{
 }
 .user_interface input:focus {
     -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
+}
+.user_interface p{
+    text-align: center;
+    font-size: 1.9rem;
+    font-family: Monoton;
+    color: blue;
+}
+
+p {
+    padding-top: 40px;
+    height: 300px;
 }
 
 /*glow for webkit*/
